# CellForge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.server-ai  README.md  blisslab_ui.py  server-requirements.in
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
assets/: app.cellforge.desktop  cellforge.desktop
crates/cellforge-app/: Cargo.toml  build.rs  icon.rc
crates/cellforge-app/src/: main.rs
crates/cellforge-auth/: Cargo.toml
crates/cellforge-auth/src/: db.rs  jwt.rs
crates/cellforge-config/: Cargo.toml
crates/cellforge-config/src/: lib.rs
crates/cellforge-data/: Cargo.toml
crates/cellforge-data/src/: csv.rs  edit.rs  jsonl.rs  lib.rs  parquet.rs  schema.rs  sort.rs  stats.rs
crates/cellforge-export/: Cargo.toml
crates/cellforge-export/src/: compile.rs  convert.rs  latex2typst.rs  lib.rs  templates.rs
crates/cellforge-kernel/: Cargo.toml
crates/cellforge-kernel/python/: cellforge.py  cellforge_ui.py
crates/cellforge-kernel/src/: bridge.rs  client.rs  connection.rs  launcher.rs  lib.rs  manager.rs  messages.rs  session.rs
crates/cellforge-notebook/: Cargo.toml
crates/cellforge-notebook/src/: format.rs  io.rs
crates/cellforge-reactive/: Cargo.toml
crates/cellforge-reactive/src/: analyzer.rs  dag.rs  lib.rs  scheduler.rs
crates/cellforge-server/: Cargo.toml
crates/cellforge-server/src/: config.rs  lib.rs  main.rs  state.rs
crates/cellforge-server/src/plugins/: config.rs  manifest.rs  mod.rs  routes.rs  scanner.rs
crates/cellforge-server/src/routes/: admin.rs  ai.rs  auth.rs  avatar.rs  dashboard.rs  data.rs  export.rs  fileops.rs  files.rs  git.rs  kernels.rs  mod.rs  notebooks.rs  tests.rs
crates/cellforge-server/src/ws/: collab.rs  handler.rs  mod.rs  protocol.rs
crates/cellforge-varexplorer/: Cargo.toml
crates/cellforge-varexplorer/src/: introspect.rs  introspect_javascript.rs  introspect_julia.rs  introspect_kotlin.rs  introspect_octave.rs  introspect_r.rs  introspect_ruby.rs  lib.rs  types.rs
docs/: Built-in Library.md  Getting Started.md  writing plugins.md  writing templates.md
docs/specs/: 2026-05-01-redesign-phase-1-foundation.md  2026-05-01-redesign-phase-2-shell.md
docs/superpowers/plans/: 2026-04-14-cellforge-improvements.md
examples/plugins/bliss-demo/: plugin.json
examples/plugins/bliss-demo/frontend/: plugin.js
examples/plugins/bliss-demo/pylib/: bliss_demo.py
examples/plugins/bliss-mermaid/: plugin.json
examples/plugins/bliss-mermaid/frontend/: plugin.js
examples/plugins/bliss-mermaid/pylib/: bliss_mermaid.py
examples/plugins/cellforge-demo/: plugin.json
examples/plugins/cellforge-demo/frontend/: plugin.js
examples/plugins/cellforge-demo/pylib/: cellforge_demo.py
examples/plugins/cellforge-mermaid/: plugin.json
examples/plugins/cellforge-mermaid/frontend/: plugin.js
examples/plugins/cellforge-mermaid/pylib/: cellforge_mermaid.py
examples/plugins/solarized-dark/: README.md  plugin.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: auth.spec.ts  notebook.spec.ts  playwright.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminPanel.tsx  Avatar.tsx  CommandPalette.tsx  ContextMenu.tsx  Dashboard.tsx  ErrorBoundary.tsx  ExportModal.tsx  ForcePasswordChange.tsx  HomeDashboard.tsx  KernelPicker.tsx  LoginPage.tsx  ModalDialog.tsx  NotebookPicker.tsx  SaveModal.tsx  Settings.tsx  ShareModal.tsx  ShortcutHelp.tsx  TypstEditorModal.tsx  UpdateNotice.tsx
frontend/src/components/brand/: BrandMark.tsx  Wordmark.tsx
frontend/src/components/data/: DataViewer.tsx
frontend/src/components/layout/: AppLayout.tsx  AppShell.tsx  FFNav.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/components/modals/: FFModalShell.tsx
frontend/src/components/notebook/: CellContainer.tsx  CellLanguageSelector.tsx  CellOutput.tsx  CodeCell.tsx  MarkdownCell.tsx  Notebook.tsx  SearchBar.tsx
frontend/src/components/sidebar/: SidebarAI.tsx  SidebarDeps.tsx  SidebarFiles.tsx  SidebarGit.tsx  SidebarHistory.tsx  SidebarToc.tsx  VariableExplorer.tsx
frontend/src/components/toolbar/: FileName.tsx  PresenceIndicator.tsx  TabBar.tsx  TopBar.tsx
frontend/src/components/typst/: TypstEditorView.tsx  TypstPreview.tsx
frontend/src/hooks/: useCellDrag.ts  useKernel.ts  useMediaQuery.ts  useNotebookKeys.ts
frontend/src/lib/: ansi.tsx  clipboard.ts  diff.ts  highlight.tsx  i18n.ts  languages.ts  monaco-julia.ts  monaco-r.ts  monaco-typst.ts  renderMath.ts  serialize.ts  types.ts  uuid.ts  version.ts
frontend/src/locales/: en.json  pl.json
frontend/src/plugins/: builtins.ts  loader.ts  registry.ts  types.ts
frontend/src/services/: api.ts  breakpoints.ts  collaboration.ts  executionQueue.ts  exportHtml.ts  formatCode.ts  kernelComplete.ts  messageHandler.ts  monacoCompletion.ts  notebookOps.ts  tabManager.ts  undoRedo.ts  websocket.ts
frontend/src/stores/: kernelStore.ts  notebookStore.ts  tabStore.ts  uiStore.ts  variableStore.ts
packaging/linux/: build-appimage.sh  webkit-shim.c
scripts/: dev.sh  docker-install.sh
