[workspace]
resolver = "2"
members = [
    "crates/cellforge-config",
    "crates/cellforge-server",
    "crates/cellforge-notebook",
    "crates/cellforge-kernel",
    "crates/cellforge-reactive",
    "crates/cellforge-varexplorer",
    "crates/cellforge-export",
    "crates/cellforge-auth",
    "crates/cellforge-app",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
