[workspace]
resolver = "2"
members = [
    "crates/cellforge-config",
    "crates/cellforge-server",
    "crates/cellforge-notebook",
    "crates/cellforge-kernel",
    "crates/cellforge-reactive",
    "crates/cellforge-varexplorer",
    "crates/cellforge-export",
    "crates/cellforge-auth",
    "crates/cellforge-data",
    "crates/cellforge-app",
]

[workspace.package]
version = "1.4.3"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Release profile: strip symbols + use a single codegen unit + LTO.
# Drops the release binary from ~80 MB → ~30 MB matching what README
# advertises, with a few seconds of extra compile time on a fresh build.
# Use `strip = "symbols"` (not "debuginfo") to also drop the section
# headers that bring no diagnostic value in a stripped artifact.
[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
