[package]
name = "cellforge-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cellforge-app"

[dependencies]
cellforge-server = { path = "../cellforge-server", features = ["embed-frontend"] }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

wry = "0.55"
tao = { version = "0.35", features = ["rwh_06"] }
png = "0.18"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"
