[package]
name = "cellforge-auth"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

rusqlite = { version = "0.39", features = ["bundled"] }
bcrypt = "0.19"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
dirs = "6"
