[package]
name = "cellforge-export"
version.workspace = true
edition.workspace = true

[dependencies]
cellforge-notebook = { path = "../cellforge-notebook" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"

# typst compiler — embedded, no CLI needed
typst = "0.14"
typst-pdf = "0.14"
typst-syntax = "0.14"
typst-eval = "0.14"
comemo = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cellforge-config = { path = "../cellforge-config" }
dirs = "6"
typst-svg = "0.14"
# @preview package download — ureq uses rustls by default (no OpenSSL), so the
# release cross-builds for aarch64 don't need a system/cross OpenSSL toolchain.
ureq = "2"
flate2 = "1"
tar = "0.4"
