[package]
name = "cellforge-server"
version.workspace = true
edition.workspace = true

[dependencies]
cellforge-notebook = { path = "../cellforge-notebook" }
cellforge-kernel = { path = "../cellforge-kernel" }
cellforge-varexplorer = { path = "../cellforge-varexplorer" }
cellforge-reactive = { path = "../cellforge-reactive" }
cellforge-export = { path = "../cellforge-export" }
cellforge-auth = { path = "../cellforge-auth" }
cellforge-config = { path = "../cellforge-config" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

parking_lot = "0.12"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
dirs = "6"
axum-extra = { version = "0.12", features = ["multipart"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[features]
default = []
embed-frontend = ["rust-embed", "mime_guess"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
